fix: remove isBlank for use in java 8 and remove logs pro db